--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,11 @@ services:
         xyz.tangerie.reverse_proxy.port: "8000"
     volumes:
       - ./data:/app/data
-    environment:
-      - BASE_URL=/quotes
+    # environment:
+    #   - BASE_URL=/quotes
     networks:
       - nginx-proxy-overlay
-      
+
 networks:
   nginx-proxy-overlay:
     driver: overlay
