--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     deploy:
       replicas: 1
       labels:
-        # xyz.tangerie.reverse_proxy.path: "/quotes"
+        xyz.tangerie.reverse_proxy.path: "/"
         xyz.tangerie.reverse_proxy.port: "8000"
         xyz.tangerie.reverse_proxy.server_name: "quotes.tangerie.xyz"
     # environment:
